<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity">

    <TextView
        android:id="@+id/lblJoueur1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textJ1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp" />

    <EditText
        android:id="@+id/txtNomJoueur1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nom joueur 1"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/lblJoueur1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"/>

    <TextView
        android:id="@+id/lblJoueur2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texteJ2"
        app:layout_constraintTop_toBottomOf="@id/txtNomJoueur1"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp" />

    <EditText
        android:id="@+id/txtNomJoueur2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nom joueur 2"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/lblJoueur2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"/>

    <Button
        android:id="@+id/btnJouer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_joueur"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/txtNomJoueur2"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
